Revert "Fixing jsonapi configuration"
This reverts commit eacbe06123961a5839264e4027918825589e7bd0.

--- a/config/jsonapi/settings.yml
+++ b/config/jsonapi/settings.yml
@@ -6,9 +6,9 @@ type-restriction: true
 attribute-restriction: false
 empty-is-null: true
 page-size: 0
-request-company-schema: false
-request-sharded-schema: false
 request-accounting-schema: false
-request-accounting-prefix: false
+request-sharded-schema: false
+request-company-schema: false
+request-table-prefix: false
 pg-order-by: "created_at"
 pg-search_path: '"$user", request-sharded-schema, public'
