--- a/config/jsonapi/settings.yml
+++ b/config/jsonapi/settings.yml
@@ -6,9 +6,6 @@ type-restriction: true
 attribute-restriction: false
 empty-is-null: true
 page-size: 0
-request-accounting-schema: false
-request-sharded-schema: false
-request-company-schema: false
+request-schema: false
 request-table-prefix: false
 pg-order-by: "created_at"
-pg-search_path: '"$user", request-sharded-schema, public'
