Correct (old) settings for JSONAPI

--- a/config/jsonapi/settings.yml
+++ b/config/jsonapi/settings.yml
@@ -8,7 +8,7 @@ empty-is-null: true
 page-size: 0
 request-company-schema: false
 request-sharded-schema: false
-request-accounting-schema: false
-request-accounting-prefix: false
+request-schema: false
+request-table-prefix: false
 pg-order-by: "created_at"
 pg-search_path: '"$user", request-sharded-schema, public'
